# auto-ktx

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/auto_ktx/utils/: __init__.py  controlled_exception.py  custom_logger.py
src/auto_ktx/web_automation/: web_automation.py  web_automation.sh
