[project]
name = "auto-ktx"
version = "0.1.0"
description = ""
authors = [
    {name = "cuzai@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.39.0,<5.0.0)"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
